--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "07-restserver",
     "version": "1.0.0",
+    "engines": {
+        "node": "11.4.0"
+    },
     "description": "Servidor restful",
     "main": "index.js",
     "scripts": {
@@ -10,7 +13,11 @@
     "author": "Rodolfo Garcia",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^3.0.3",
         "body-parser": "^1.18.3",
-        "express": "^4.16.4"
+        "express": "^4.16.4",
+        "mongoose": "^5.4.0",
+        "mongoose-unique-validator": "^2.0.2",
+        "underscore": "^1.9.1"
     }
 }
